--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "supertest": "6.1.6"
   },
   "dependencies": {
+    "@types/knex-cleaner": "^1.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.14",
